Gebreken verbetert en nu helemaal werken?